syntax = "proto3";

package com.academy.fintech;

option java_multiple_files = true;

service CommonUtilityService{}

message BigDecimalValue {
  uint32 scale = 1;
  uint32 precision = 2;
  bytes value = 3;
}
